src/test/compile-fail/bad-name.rs
// error-pattern: expected

fn main() {
  let x.y::<int>.z foo;
}
